# actix-boiler

./: .env.example  .gitignore  Cargo.toml  Procfile  README.md  TEST.http  docker-compose.yml
src/: cli_args.rs  main.rs
src/app/: mod.rs  route.rs
src/app/controller/: mod.rs
src/app/db/: mod.rs
src/app/service/: mod.rs
src/app/service/v1/: health.rs
